--- a/app/src/main/res/layout/notes_fragment.xml
+++ b/app/src/main/res/layout/notes_fragment.xml
@@ -3,11 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".features.notes.NotesFragment">
 
-    <FrameLayout
-        android:id="@+id/fragments_container"
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:text="Hello" />
 
 </FrameLayout>
