--- a/features/notes/src/main/res/layout/notes_fragment.xml
+++ b/features/notes/src/main/res/layout/notes_fragment.xml
@@ -1,13 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.NotesFragment">
+    tools:context="com.bhaktaprogram.notehelper.notes.ui.NotesFragment">
 
     <TextView
+        android:id="@+id/text_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
