--- a/features/notes/src/main/res/layout/notes_fragment.xml
+++ b/features/notes/src/main/res/layout/notes_fragment.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.bhaktaprogram.notehelper.notes.ui.NotesFragment">
+    tools:context=".ui.NotesFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list"
