--- a/main/src/main/res/values/dimens.xml
+++ b/main/src/main/res/values/dimens.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="day_text_size">16sp</dimen>
+    <dimen name="day_of_month_today_border">1dp</dimen>
+    <dimen name="day_of_month_selected_border">1dp</dimen>
+    <dimen name="day_of_month_default_padding">3dp</dimen>
 </resources>
