--- a/main/src/main/res/layout/calendar_fragment.xml
+++ b/main/src/main/res/layout/calendar_fragment.xml
@@ -8,6 +8,9 @@
         android:id="@+id/calendar"
         android:layout_width="0dp"
         android:layout_height="316dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
