Restore calendar size

--- a/main/src/main/res/layout/calendar_fragment.xml
+++ b/main/src/main/res/layout/calendar_fragment.xml
@@ -8,11 +8,9 @@
     <com.bhaktaprogram.calendarview.CalendarView
         android:id="@+id/calendar"
         android:layout_width="0dp"
-        android:layout_height="316dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:padding="8dp"
+        android:layout_height="340dp"
+        android:paddingStart="2dp"
+        android:paddingEnd="2dp"
         android:background="#fff"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
