--- a/main/src/main/res/layout/calendar_fragment.xml
+++ b/main/src/main/res/layout/calendar_fragment.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="#17707070">
 
-    <com.bhaktaprogram.calendarview.MonthView
+    <com.bhaktaprogram.calendarview.month.MonthView
         android:id="@+id/calendar"
         android:layout_width="0dp"
         android:layout_height="340dp"
