--- a/main/src/main/res/layout/calendar_fragment.xml
+++ b/main/src/main/res/layout/calendar_fragment.xml
@@ -2,8 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#17707070">
+    android:layout_height="match_parent">
 
     <com.bhaktaprogram.calendarview.month.MonthView
         android:id="@+id/calendar"
@@ -11,9 +10,25 @@
         android:layout_height="340dp"
         android:paddingStart="2dp"
         android:paddingEnd="2dp"
-        android:background="#fff"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:visibility="gone"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <com.bhaktaprogram.calendarview.CalendarViewPager
+        android:id="@+id/calendar_pager"
+        android:layout_width="0dp"
+        android:layout_height="340dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/calendar" />
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0.6dp"
+        android:background="#39000000"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/calendar_pager" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
