--- a/features/edit-note/src/main/res/layout/edit_notes_fragment.xml
+++ b/features/edit-note/src/main/res/layout/edit_notes_fragment.xml
@@ -8,12 +8,14 @@
     tools:context=".ui.EditNotesFragment">
 
     <TextView
+        android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/title"
         android:textSize="20sp" />
 
     <TextView
+        android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_marginTop="16dp"
         android:layout_height="match_parent"
