--- a/features/notes/src/main/res/layout/notes_fragment.xml
+++ b/features/notes/src/main/res/layout/notes_fragment.xml
@@ -13,4 +13,13 @@
         tools:itemCount="10"
         tools:listitem="@layout/note_item" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="16dp"
+        android:contentDescription="@string/add_new_note"
+        android:src="@drawable/ic_add" />
+
 </FrameLayout>
