--- a/features/notes/src/main/res/layout/note_item.xml
+++ b/features/notes/src/main/res/layout/note_item.xml
@@ -13,6 +13,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:textStyle="bold"
+        android:text="hardcoded text"
         tools:text="Title" />
 
     <TextView
